--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Touchin' Apps</title>
+	<link rel="stylesheet" type="text/css" href"jsapp.css">
+	<script type="text/javascript" src=quizapp.js></script>
 </head>
 <body>
 	<h1>Demo App</h1>
