--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Touchin' Apps</title>
 	<link rel="stylesheet" type="text/css" href"jsapp.css">
 	<script type="text/javascript" src=quizapp.js></script>
+	<script type="text/javascript" src=server.js></script>
 </head>
 <body>
 	<h1>Demo App</h1>
