--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Touchin' Apps</title>
-	<link rel="stylesheet" type="text/css" href"jsapp.css">
-	<script type="text/javascript" src=quizapp.js></script>
+	<link rel="stylesheet" type="text/css" href="jsapp.css">
+	<script type="text/javascript" src=jsapp.js></script>
 </head>
 <body>
 	<h1>Demo App</h1>
