--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,21 @@
 	<script type="text/javascript" src=jsapp.js></script>
 </head>
 <body>
-	<h1>Demo App</h1>
-	<p>When your butts go hunting for a beehive</p>
+	<h1>Quiz Application</h1>
+	<div class = "container">
+		<h2 class = "center">Test your knowledge!</h2>
+		<h3 class = "center underline">Question one:</h3>
+		<p class = "center bold">What number is next in this sequence, 2, 4, 6, 8....</p>
+
+		<form class = "radios">
+			<input type="radio" name=One value="65">65
+			<br>
+			<input type="radio" name=One value="24">24
+			<br>
+			<input type="radio" name=One value="10">10
+			<br>
+			<input type="radio" name=One value="3">3
+		</form>
+
+	</div>
 </body>
